--- a/BoardBloom/BoardBloom/Views/Shared/_CommentPartial.cshtml
+++ b/BoardBloom/BoardBloom/Views/Shared/_CommentPartial.cshtml
@@ -10,9 +10,11 @@
 
 <head>
     <link rel="stylesheet" href="~/css/Comments/_CommentPartial.css" />
+    <script src="~/js/Comment/_CommentPartial.js"></script>
 </head>
 
-<div class="comment-card">
+<div class="comment-card" id=comment-@Model.Id>
+    <input type="hidden" class="comment-id" value="@Model.Id" />
     <div class="comment-header">
         <img class="comment-header-profile-image" src="https://buffer.com/library/content/images/size/w1200/2023/10/free-images.jpg" alt="profile image" />
         <div class="comment-header-info">
@@ -26,13 +28,9 @@
             @if (UserManager.GetUserId(User) == Model.User.Id)
             {
 
-                <a class="comment-edit-button" href="@Url.Action("EditComm", "Blooms", new { commId = Model.Id })">
-                    <p>Edit</p>
-                </a>
+                <button class="comment-edit-button" onclick="onEditTap(@Model.Id)">Edit</button>
                 <form method="post" action="@Url.Action("Delete", "Comments", new { id = Model.Id })">
-                    <button class="comment-delete-button" type="submit">
-                        <p>Delete</p>
-                    </button>
+                    <button class="comment-delete-button" type="submit">Delete</button>
                 </form>
             }
         </div>
