--- a/BoardBloom/BoardBloom/wwwroot/css/site.css
+++ b/BoardBloom/BoardBloom/wwwroot/css/site.css
@@ -6,6 +6,7 @@
   --background-primary: #ffffff;
   --background-secondary: #f4f3fb;
   --bloom-gray: #c7c7c7;
+  --hover-gray: #1c1c1caf;
 }
 
 body, html {
