--- a/BoardBloom/BoardBloom/Views/Shared/_Layout.cshtml
+++ b/BoardBloom/BoardBloom/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="BLooms" asp-action="New">Add Bloom</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Boards" asp-action="Index">Boards</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
