--- a/BoardBloom/BoardBloom/Views/Shared/_BoardPreviewPartial.cshtml
+++ b/BoardBloom/BoardBloom/Views/Shared/_BoardPreviewPartial.cshtml
@@ -20,6 +20,7 @@
 
 <head>
     <link rel="stylesheet" href="~/css/Boards/_BoardPreviewPartial.css" />
+    <script src="~/js/Board/_BoardPreviewPartial.js"></script>
 </head>
 
 <div class="board-preview-wrapper" id="@Model.Id">
@@ -40,5 +41,7 @@
     <div class="board-preview-overlay">
         <p class="board-preview-overlay-title">@Model.Name</p>
     </div>
+
+    <p>@Model.Name</p>
 </div>
 
