--- a/BoardBloom/BoardBloom/wwwroot/css/Blooms/BloomEdit.css
+++ b/BoardBloom/BoardBloom/wwwroot/css/Blooms/BloomEdit.css
@@ -10,13 +10,14 @@
 }
 
 .edit-bloom-title {
-    color: var(--content-secondary);
-    text-align: center;
     font-size: 32px;
-    font-weight: 800;
+    font-weight: 600;
+    color: var(--content-primary);
+    text-align: center;
 }
 
 .edit-bloom-title-span {
+    font-size: 24px;
     font-weight: 900;
     color: var(--accent-primary);
 }
