--- a/BoardBloom/BoardBloom/Views/Shared/_BloomPartial.cshtml
+++ b/BoardBloom/BoardBloom/Views/Shared/_BloomPartial.cshtml
@@ -14,7 +14,7 @@
 
 <div class="bloom-card" id="@Model.Id" onclick="() => { handleTap(@Model.Id) }" userId=@Model.UserId> 
     <div class="bloom-header">
-        <img class="bloom-header-profile-image" src="https://buffer.com/library/content/images/size/w1200/2023/10/free-images.jpg" alt="profile image" />
+        <img class="bloom-header-profile-image" src="@(Model.User.ProfilePicture != null ? "data:image/png;base64," + Convert.ToBase64String(Model.User.ProfilePicture) : "https://st3.depositphotos.com/6672868/13701/v/450/depositphotos_137014128-stock-illustration-user-profile-icon.jpg")" alt="profile image" />
         <div class="bloom-header-info">
             <a href="@Url.Action("UserProfile", "Users", new { userId = Model.User.Id })">
                 <h4 class="bloom-header-title">@Model.User.UserName</h4>
