--- a/BoardBloom/BoardBloom/Views/Users/UserProfile.cshtml
+++ b/BoardBloom/BoardBloom/Views/Users/UserProfile.cshtml
@@ -1,237 +1,73 @@
 ﻿@model BoardBloom.Models.ApplicationUser
 @using Microsoft.AspNetCore.Identity
+@using BoardBloom.Models
 
-<style>
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 
-
-    .user-link {
-        color: #555;
-        text-decoration: none;
-        font-weight: bold;
-        transition: color 0.3s;
-    }
-
-        .user-link:hover {
-            color: #8484ff;
-        }
-</style>
-
-<br />
-
-<div style="text-align: center;">
-    <h2 style="font-family: 'Rubik Doodle Shadow', cursive;">@Model.UserName</h2>
-
-</div>
-<br />
-
-@if (Model.ProfilePicture != null)
-{
-    <div style="text-align: center;">
-
-        <img style="width:200px;height:200px;
-                    object-fit:cover;
-                    border-radius:30px; border: 5px solid purple;"
-             src="data:image/*;base64,@(Convert.ToBase64String(Model.ProfilePicture))">
-
-    </div>
+@{
+    Layout = "_Layout";
 }
 
+@{
+    Layout = "_Layout";
+}
 
-<br />
+<head>
+    <link rel="stylesheet" href="~/css/Users/UserProfile.css" />
+    <script src="~/js/User/UserProfile.js"></script>
+</head>
 
-<div class="d-flex justify-content-center flex-row mt-5">
-    <div class="mr-2" style="margin-right: 10px;">
-        <a class="btn" style="background-color: #3838b2; color: #ffffff;"
-           href="@Url.Action("Index", "Board", new { userId = Model.Id })">
-            <i class="bi bi-tags"></i> Boards
-        </a>
-    </div>
-
-    <div class="mr-2" style="margin-right: 10px;">
-        <a class="btn" style="background-color: #3838b2; color: #ffffff;"
-           href="@Url.Action("UserProfile", "Users", new { userId = Model.Id })">
-            <i class="bi bi-journal-bookmark-fill"></i> Bookmark-uri
-        </a>
-    </div>
-
-
-    @if (ViewBag.UserCurent == Model.Id)
-    {
-        <div>
-            <a class="btn" style="background-color: #3838b2; color: #ffffff;"
-               asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
-                <i class="bi bi-person-circle"></i> @User.Identity?.Name!
-            </a>
-
-
-        </div>
-    }
-</div>
-
-
-
-<style>
-    .card-body {
-        /*         border: 2px solid #8484ff; */
-        padding: 10px;
-        margin: 10px 0;
-    }
-
-        .card-body > div:not(:first-child):not(.card-title) {
-            border: 2px solid #8484ff;
-            padding: 5px;
-            margin: 5px 0;
-        }
-</style>
-
-<style>
-    .btn-outline-purple {
-        color: #6f42c1;
-        border-color: #6f42c1;
-    }
-
-        .btn-outline-purple:hover {
-            background-color: #6f42c1;
-            color: #fff;
-        }
-</style>
-
-<br />
-<br />
-
-<h3 style="text-align: center; font-family: 'Rubik Doodle Shadow', cursive;">Bookmarks:</h3>
-
-@if (ViewBag.Boards.Count == 0)
-{
-	<div style="text-align: center;">
-		<h4>Acest utilizator nu are niciun bookmark.</h4>
-	</div>
-} else {
-    @foreach (var board in ViewBag.Blooms)
-    {
-
-        <div class="card text-center mx-auto" style="max-width: 600px;">
-            <div class="card-header">
-                <ul class="nav nav-tabs card-header-tabs" style="display: flex; justify-content: space-between;">
-                    <li class="nav-item">
-                        <a class="user-link" href="@Url.Action("UserProfile", "Users", new { userId = board.User.Id })">
-                            <i class="bi bi-person"></i> @board.User.UserName
-                        </a>
-                    </li>
-
-
-                    <li class="nav-item">
-                        <a>
-                            @board.Date
-                        </a>
-                    </li>
-
-                </ul>
-            </div>
-            <div class="card-body">
-
-                <h3 class="card-title py-3 px-3 rounded-2 text-center" style="background-color:#8484ff;; color: #ffffff;">@board.Title</h3>
-
-
-
-                @if (!string.IsNullOrEmpty(board.Image))
-                {
-                    if (IsImage(board.Image))
-                    {
-                        <div style="text-align: center;">
-                            <img src="@Url.Content(board.Image)" alt="Bookmark Image" class="img-fluid" />
-                        </div>
-                    }
-                    else if (IsVideo(board.Image))
-                    {
-                        <div style="text-align: center;">
-                            <video width="500" controls style="display: inline-block;">
-                                <source src="@Url.Content(board.Image)" type="video/mp4">
-
-                            </video>
-                        </div>
-                    }
-                    else if (IsEmbeddedLink(board.Image))
-                    {
-                        <div style="text-align: center;">
-                            <iframe width="500"
-                                    controls style="display: inline-block"
-                                    height="315"
-                                    src="@Url.Content(board.Image)"
-                                    frameborder="0"
-                                    allowfullscreen></iframe>
-
-                        </div>
-                    }
-                }
-
-                <div class="card-text">@board.Content</div>
-
-
-
-
-
-            </div>
-            <a class="btn" style="background-color: #3838b2; color: #ffffff;" href="/Bookmarks/Show/@board.Id">Afisare Bookmark</a>
-        </div>
-
-        <br />
-        <br />
-        <br />
-        <br />
-
-        <style>
-            .centered-div {
-                margin: 0 auto;
-                width: fit-content;
+<div class="user-profile-wrapper">
+    <div class="user-profile-header">
+        <div class="user-profile-picture-wrapper">
+            @if (Model.ProfilePicture != null) {
+                <img class="user-profile-picture" src="data:image/png;base64,@Convert.ToBase64String(Model.ProfilePicture)" alt="Profile Picture" />
+            } else {
+                <img class="user-profile-picture" src="https://st3.depositphotos.com/6672868/13701/v/450/depositphotos_137014128-stock-illustration-user-profile-icon.jpg" />
             }
-        </style>
-    }
-    @* Afisarea paginata *@
-    <div class="centered-div">
-        <nav aria-label="Page navigation example">
-            <ul class="pagination">
-                <li class="page-item">
-                    <a class="page-link"
-                       href="@Url.Action("UserProfile", new { userId = Model.Id, page = 1 })" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                    </a>
-                </li>
-                @for (int i = 1; i <= ViewBag.lastPage; i++)
-                {
-                    <li class="page-item">
-                        <a class="page-link"
-                           href="@Url.Action("UserProfile", new { userId = Model.Id, page = i })">@(i)</a>
-                    </li>
-                }
-                <li class="page-item">
-                    <a class="page-link"
-                       href="@Url.Action("UserProfile", new { userId = Model.Id, page = ViewBag.lastPage })" aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
+            @if (User.Identity.IsAuthenticated && UserManager.GetUserId(User) == Model.Id) {
+                <div class="user-profile-picture-actions">
+                    <a class="user-profile-picture-button" href="/Users/EditProfilePicture/@Model.Id">Edit</a>
+                    <button class="user-profile-picture-button" onclick="deleteProfilePicture('@Model.Id')">Delete</button>
+                </div>
+            }
+        </div>
+        <div class="user-profile-picture-header-info">
+            <h2 class="user-profile-title">@Model.UserName</h2>
+            <div class="user-profile-info">
+                <p class="user-profile-info-item">Email: @Model.Email</p>
+                <div class="user-profile-info-sub">
+                    <p class="user-profile-info-item">Boards: @ViewBag.Boards.Count</p>
+                    <p class="user-profile-info-item">Blooms: @ViewBag.Blooms.Count</p>
+                </div>
+            </div>
+        </div>
     </div>
-}
 
-@functions {
-    private bool IsImage(string filePath)
-    {
-        var imageExtensions = new[] { ".jpg", ".jpeg", ".png", ".gif", ".bmp" };
-        var extension = System.IO.Path.GetExtension(filePath)?.ToLower();
-        return extension != null && imageExtensions.Contains(extension);
-    }
+    <div class="user-profile-boards-wrapper">
+        <p class="user-profile-boards-title">User's boards</p>
+        <div class="user-profile-boards">
+            @if (ViewBag.Boards == null || ViewBag.Boards.Count == 0) {
+                <p class="user-profile-no-boards">No boards found</p>
+            } else {
+                @foreach (Board board in ViewBag.Boards) {
+                    @Html.Partial("_BoardPreviewPartial", board)
+                }
+            }
+        </div>
+    </div>
 
-    private bool IsVideo(string filePath)
-    {
-        var videoExtensions = new[] { ".mp4", ".avi", ".mkv", ".mov", ".wmv" };
-        var extension = System.IO.Path.GetExtension(filePath)?.ToLower();
-        return extension != null && videoExtensions.Contains(extension);
-    }
-
-    private bool IsEmbeddedLink(string link)
-    {
-        return link != null && link.ToLower().Contains("youtube.com");
-    }
-}
+    <div class="user-profile-boards-wrapper">
+        <p class="user-profile-blooms-title">User's blooms</p>
+        <div class="user-profile-blooms">
+            @if (ViewBag.Blooms == null || ViewBag.Blooms.Count == 0) {
+                <p class="user-profile-no-blooms">No blooms found</p>
+            } else {
+                @foreach (Bloom bloom in ViewBag.Blooms) {
+                    @Html.Partial("_BloomPartial", bloom)
+                }
+            }
+        </div>
+    </div>
+</div>
