--- a/BoardBloom/BoardBloom/Views/Shared/_BloomPreviewPartial.cshtml
+++ b/BoardBloom/BoardBloom/Views/Shared/_BloomPreviewPartial.cshtml
@@ -48,10 +48,13 @@
                     <img class="bloom-preview-info-icon" src="https://cdn.iconscout.com/icon/free/png-256/free-comment-2652894-2202811.png" alt="comment icon" />
                 </div>
             </div>
-            <form class="bloom-preview-form" method="POST" action="/Boards/RemoveBloomFromBoard/@Model.BoardId">
-                <input type="hidden" name="bloomId" value="@Model.Bloom.Id" />
-                <button class="bloom-preview-remove-button">Remove</button>
-            </form>
+            @if(SignInManager.IsSignedIn(User) && UserManager.GetUserId(User) == Model.Bloom.UserId)
+            {
+                <form class="bloom-preview-form" method="POST" action="/Boards/RemoveBloomFromBoard/@Model.BoardId">
+                    <input type="hidden" name="bloomId" value="@Model.Bloom.Id" />
+                    <button class="bloom-preview-remove-button">Remove</button>
+                </form>
+            }
         </div>
     }
 </a>
