--- a/BoardBloom/BoardBloom/Views/Shared/_CommentPartial.cshtml
+++ b/BoardBloom/BoardBloom/Views/Shared/_CommentPartial.cshtml
@@ -16,7 +16,7 @@
 <div class="comment-card" id=comment-@Model.Id>
     <input type="hidden" class="comment-id" value="@Model.Id" />
     <div class="comment-header">
-        <img class="comment-header-profile-image" src="https://buffer.com/library/content/images/size/w1200/2023/10/free-images.jpg" alt="profile image" />
+        <img class="comment-header-profile-image" src="@(Model.User.ProfilePicture != null ? "data:image/png;base64," + Convert.ToBase64String(Model.User.ProfilePicture) : "https://st3.depositphotos.com/6672868/13701/v/450/depositphotos_137014128-stock-illustration-user-profile-icon.jpg")" alt="profile image" />
         <div class="comment-header-info">
             <a href="@Url.Action("UserProfile", "Users", new { userId = Model.User.Id })">
                 <h4 class="comment-header-title">@Model.User.UserName</h4>
