--- a/BoardBloom/BoardBloom/wwwroot/css/Users/UserProfile.css
+++ b/BoardBloom/BoardBloom/wwwroot/css/Users/UserProfile.css
@@ -54,6 +54,7 @@
     width: 100px;
     height: 100px;
     border-radius: 50%;
+    object-fit: cover;
 }
 
 .user-profile-picture-wrapper:hover .user-profile-picture-actions {
