--- a/BoardBloom/BoardBloom/Views/Communities/New.cshtml
+++ b/BoardBloom/BoardBloom/Views/Communities/New.cshtml
@@ -5,7 +5,7 @@
            placeholder="Name"
            required />
 
-    <textarea name="note"
+    <textarea name="description"
               class="new-board-form-textarea"
               placeholder="Description"
               required></textarea>
